# mate-wayland-session

data/: Makefile.am
data/mate/: Makefile.am
session/: Makefile.am
