install-data-local:
	mkdir -p $(datadir)/firedecor
	mkdir -p $(datadir)/firedecor/button-styles/
	mkdir -p $(datadir)/firedecor/button-styles/mate/
	cp close.png $(datadir)/firedecor/button-styles/mate/close.png
	cp close-hovered.png $(datadir)/firedecor/button-styles/mate/close-hovered.png
	cp close-pressed.png $(datadir)/firedecor/button-styles/mate/close-pressed.png
	cp minimize.png $(datadir)/firedecor/button-styles/mate/minimize.png
	cp minimize-hovered.png $(datadir)/firedecor/button-styles/mate/minimize-hovered.png
	cp minimize-pressed.png $(datadir)/firedecor/button-styles/mate/minimize-pressed.png
	cp toggle-maximize.png $(datadir)/firedecor/button-styles/mate/toggle-maximize.png
	cp toggle-maximize-hovered.png $(datadir)/firedecor/button-styles/mate/toggle-maximize-hovered.png
	cp toggle-maximize-pressed.png $(datadir)/firedecor/button-styles/mate/toggle-maximize-pressed.png

uninstall-local:
	rm  $(datadir)/firedecor/button-styles/mate/close.png
	rm  $(datadir)/firedecor/button-styles/mate/close-hovered.png
	rm  $(datadir)/firedecor/button-styles/mate/close-pressed.png
	rm  $(datadir)/firedecor/button-styles/mate/minimize.png
	rm  $(datadir)/firedecor/button-styles/mate/minimize-hovered.png
	rm  $(datadir)/firedecor/button-styles/mate/minimize-pressed.png
	rm  $(datadir)/firedecor/button-styles/mate/toggle-maximize.png
	rm  $(datadir)/firedecor/button-styles/mate/toggle-maximize-hovered.png
	rm  $(datadir)/firedecor/button-styles/mate/toggle-maximize-pressed.png

EXTRA_DIST = \
	close.png \
	close-hovered.png  \
	close-pressed.png  \
	meson.build  \
	minimize.png  \
	minimize-hovered.png  \
	minimize-pressed.png  \
	toggle-maximize.png  \
	toggle-maximize-hovered.png \
	toggle-maximize-pressed.png

